# triton-prep

./: .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  publish.yml
models/tinybert/: config.pbtxt
models/tinybert/1/: model.onnx
triton_prep/: __main__.py
triton_prep/cli/: app.py
triton_prep/cli/commands/: check.py  info.py  prepare.py
triton_prep/exporters/: base.py  onnx_exporter.py
triton_prep/services/: config_generator.py  config_templates.py  inspector.py  onnx_tester.py  repo_validator.py  repository_manager.py
