[project]
name = "triton-prep"
version = "0.1.0"
description = "CLI tool for preparing HuggingFace models for Triton Inference Server."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "typer>=0.20.0",
    "transformers>=4.40.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.17.0",
    "pydantic>=2.0.0",
]

[project.scripts]
triton-prep = "triton_prep.cli.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
